# ScriptPortal

./: .gitignore  .gitmodules  README.md
HeaderParser/: CMake.bat  CMakeLists.txt
HeaderParser/Header/: Options.h  Parser.h  Token.h  Tokenizer.h  TypeNodes.h
HeaderParser/Source/: Main.cpp  Parser.cpp  Tokenizer.cpp
LuaAutoBinding/: CMake.bat  CMakeLists.txt
LuaAutoBinding/Header/: CodeGenerator.h
LuaAutoBinding/Source/: CodeGenerator.cpp  Main.cpp
LuaPortal/Header/luaportal/: Dump.h  RefCountedObject.h
LuaPortal/Header/luaportal/impl/: CFunctions.h  ClassInfo.h  Constructor.h  LuaHelpers.h  Namespace.h  Stack.h  TypeTraits.h  Userdata.h
LuaPortal/include/luaportal/: Dump.h  LuaException.h  LuaPortal.h  RefCountedObject.h  RefCountedPtr.h
LuaPortal/include/luaportal/impl/: CFunctions.h  CallableTraits.h  ClassInfo.h  Constructor.h  FuncTraits.h  Iterator.h  LuaHelpers.h  LuaRef.h  LuaState.h  Namespace.h  Stack.h  TypeTraits.h  Userdata.h
LuaPortal/test/: Cmake.bat  CmakeLists.txt  Main.cpp  TestExeOnly.bat  main.lua
Test/: CmakeLists.txt  CreateAST.bat  Generated.cpp  Main.cpp  Object.h  Player.h  PlayerManager.h  ast.json  luaexport
